SERVER-84567: writeQueryStats logs an error rather than uassert when the feature is disabled (#17882)

GitOrigin-RevId: 640b019b6cfcf4c3c0aab69934d3963a42172d4a